--- a/examples/style.css
+++ b/examples/style.css
@@ -118,13 +118,20 @@ input[type='checkbox'] {
 
 button,
 input[type='text'],
-.checkbox-mark {
+.checkbox-mark,
+a {
   opacity: 0.7;
 }
 
 button:hover:enabled,
 input[type='text']:hover:enabled,
 input[type='text']:focus:enabled,
-.checkbox-mark:hover {
+.checkbox-mark:hover,
+a:hover {
   opacity: 1;
+}
+
+a {
+  color: #61dafb;
+  text-decoration: none;
 }
